# demo-container-runtime

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo_container_runtime.cbp
demo/: CMakeLists.txt  README.md
demo/capabilities/: CMakeLists.txt  README.md  bash-with-no-caps.cpp  demo_cap
demo/namespaces/: CMakeLists.txt  README.md
demo/namespaces/mount/: CMakeLists.txt  README.md  bash-in-mount-ns.cpp
demo/namespaces/net/: CMakeLists.txt  README.md  bash-in-net-ns.cpp
demo/namespaces/pid/: CMakeLists.txt  README.md  bash-in-pid-ns.cpp
demo/namespaces/uts/: CMakeLists.txt  README.md  bash-in-uts-ns.cpp
demo/seccomp/: CMakeLists.txt  README.md  bash-in-seccomp.cpp
runtime/: CMakeLists.txt  README.md  runtime.cpp  separate.cpp  separate.h
runtime/plugin/: CleanMountsSeparationPlugin.cpp  CleanMountsSeparationPlugin.h  MountImageSeparationPlugin.cpp  MountImageSeparationPlugin.h  MountNamespaceSeparationPlugin.cpp  MountNamespaceSeparationPlugin.h  MountSeparationPlugin.cpp  MountSeparationPlugin.h  NetNamespaceSeparationPlugin.cpp  NetNamespaceSeparationPlugin.h  PidNamespaceSeparationPlugin.cpp  PidNamespaceSeparationPlugin.h  SeparationFailedException.cpp  SeparationFailedException.h  SeparationPlugin.cpp  SeparationPlugin.h  SeparationPluginList.cpp  SeparationPluginList.h  SeparationProcessor.cpp  SeparationProcessor.h  UtsNamespaceSeparationPlugin.cpp  UtsNamespaceSeparationPlugin.h
testcontainer/: .gitignore  README.md  build-container.sh
